@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-17T01:41:34Z",
-  "count_outdated" : 431,
-  "uniques_outdated" : 268,
-  "count" : 443,
-  "uniques" : 276,
+  "timestamp" : "2023-07-17T16:20:23Z",
+  "count_outdated" : 432,
+  "uniques_outdated" : 269,
+  "count" : 444,
+  "uniques" : 277,
   "clones" : [
-    {
-      "timestamp": "2023-07-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 6,
@@ -34,6 +25,15 @@
     },
     {
       "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
