@@ -3,11 +3,6 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2023-07-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 6,
       "uniques": 4
@@ -19,6 +14,11 @@
     },
     {
       "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
